# 1c-consultant

./: README.md  TASKS.md  data-paths.example.yaml  pyproject.toml  Агент-консультант 1С ERP — описание проекта.docx
