# Заготовка. Точные версии зависимостей фиксируются в задаче 2 (ADR по стеку).
# Структура пакета и финальный состав — задача 1 (каркас проекта).

[project]
name = "erp-consultant-agent"
version = "0.0.1"
description = "Локальный MCP-агент — консультант по конфигурации 1С ERP. Отвечает из реальной документации, а не фантазирует."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sergey Khlebnikov" }]
keywords = ["1c", "erp", "mcp", "rag", "claude", "assistant"]

dependencies = [
    # MCP-сервер (подключение к десктопу Claude)
    "fastmcp",
    # Конфиг и модели данных
    "pydantic>=2",
    "pyyaml",
    # Локальные эмбеддинги BGE-M3 (гибрид dense+sparse)
    "FlagEmbedding",
    # Реранкинг / мультимодал / второй голос судьи (опционально, по ключу)
    "cohere",
    # Парсинг XML-выгрузки конфигурации
    "lxml",
    # OCR для скриншотов в документации (движок уточняется в задаче 4)
    # "pytesseract" / альтернатива — решается на этапе индексатора
    # Векторное хранилище — выбор в ADR (Qdrant / Milvus / pgvector)
    # "qdrant-client"
    # Наблюдаемость
    "sentry-sdk",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "pip-audit",
    "detect-secrets",
]

[project.urls]
Repository = "https://github.com/hleserg/1c-consultant"

# CLI появится в задаче 8 (оркестрация индексации)
# [project.scripts]
# erp-agent = "erp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_agent"]

# ── ruff: линтер + форматтер ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ── mypy: статическая типизация ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ── pytest + покрытие ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=src/erp_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/erp_agent"]
branch = true

[tool.coverage.report]
show_missing = true
# Порог покрытия зафиксируется в задаче 0a
# fail_under = 70
